frontend/src/scss/components/dashboard.css
/* ... */
.noJobCents {
    width: 100%;
    text-align: center;
    position: absolute;
    top: 45%;
}

.not-x-button {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: blue;
    padding: 10vh;
    border-radius: 50px;
    color: #ffffff;
    /* max-height: 90vh; */
}

.challengeContent {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.companyName {
    font-size: 30px;
}

.challengeDescription {
    max-width: 800px;
}

.challengeImage {
    border-radius: 20px;
    max-height: 75px;
    max-width: 75px;
    margin-top: -5vh;
}

.challengeName {
    font-size: 22px;
}

.copyImg {
    position: absolute;
    bottom: 0px;
    right: 2vw;
}

.currentBalance {
    padding-bottom: 35px;
    padding-top: 15px;
}

.referralCode {
    font-size: 14px;
    padding-top: 7px;
}

.referralCodeWrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    align-self: center;
    position: relative;
}

.fadeOutAnimation {
    animation: fadeOut 0.2s ease-in both;
}

.spinner {
    height: 100px;
    width: 100px;
    border: 6px solid;
    border-color: transparent black black black;
    border-radius: 75px;
    position: fixed;
    top: 50vh;
    left: 50vw;
    margin-top: -100px;
    margin-left: -50px;
    animation: rotate 1.55s infinite linear;
}

a {
    cursor: pointer;
    text-decoration: none;
}

@keyframes rotate {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(360deg);
    }
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

